just stop flickering. please

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -358,3 +358,7 @@ footer {
   -webkit-transition: background-position 0 linear;
   transition: background-position 0 linear;
 }
+.btn {
+  -webkit-transition: background-position 0 linear;
+  transition: background-position 0 linear;
+}
